--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 </ul>
             </address>
             </div>
-            <div class="footer-right">
+            <div class="footer-sotial">
                 <h2 class="footer-title">присоединяйтесь</h2>
                             <ul class="footer-sotial-list">
                                 <li class="footer-social-item">
@@ -398,6 +398,25 @@
                                 </li>
                             </ul>
             </div>
+            <div class="footer-form">
+                <form action="" class="footer-signup">
+                    <h2 class="footer-title">Подпишитесь на рассылку</h2>
+                    <div class="footer-form-signup">
+                        <input
+                        type="email"
+                        class="form-footer-mail"
+                        placeholder="E-mail"
+                        name="mail"
+                        >
+                        <button type="submit" class="footer-form-button">
+                            Подписаться
+                            <svg class="footer-button-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-signup-btn"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -409,6 +428,95 @@
                 </svg>
             </button>
             <!-- </div> -->
+            <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+            <form action="">
+                <div class="modal-field">
+                    <label class="form-input-text" for="user-name">
+                    Имя
+                    </label>
+                    <div class="input-wrap">
+                        <input
+                            id="user-name"
+                            type="text"
+                            name="user-name"
+                            class="modal-form-text"
+                        >
+                        <svg class="input-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-name">
+                            </use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="modal-field">
+                    <label class="form-input-text" for="user-tel">
+                        Телефон
+                    </label>
+                    <div class="input-wrap">
+                    <input
+                        id="user-tel"
+                        type="tel"
+                        name="user-tel"
+                        class="modal-form-tel"
+                    >
+                    <svg class="input-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-tel">
+                        </use>
+                    </svg>
+                    </div>
+                </div>
+                <div class="modal-field">
+                    <label class="form-imput-text" for="user-mail">
+                        Почта
+                    </label>
+                    <div class="input-wrap">
+                    <input
+                        id="user-mail"
+                        type="mail"
+                        name="user-mail"
+                        class="modal-form-mail"
+                    >
+                    <svg class="input-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-mail">
+                        </use>
+                    </svg>
+                    </div>
+                </div>
+                <div class="modal-field">
+                    <label class="form-input-text" for="user-text">
+                        Комментарий
+                    </label>
+                    <textarea
+                        id="user-text"
+                        name="user-text"
+                        class="user-text"
+                        placeholder="Введите текст"
+                    ></textarea>
+                    
+                </div>
+                <div class="modal-checkbox">
+                    <input
+                        id="checkbox"
+                        type="checkbox"
+                        class="modal-checkbox-text visually-hidden"
+                        name="check"
+                    >
+                    <label for="checkbox" class="policy">
+                        <span class="check-mark">
+                            <svg class="check-icon" width="11" height="8">
+                                <use href="./images/icons.svg#icon-check">
+                                </use>
+                            </svg>
+                        </span>
+                        Соглашаюсь с рассылкой и принимаю&nbsp;
+                        <a href="" class="modal-checkbox-link">
+                            Условия договора
+                        </a>
+                    </label>
+                </div>
+                <div class="modal-button-wrap">
+                    <button type="submit" class="modal-form-submit">Отправить</button>
+                </div>
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
