--- a/portfolio.html
+++ b/portfolio.html
@@ -244,7 +244,7 @@
                     </ul>
                 </address>
             </div>
-            <div class="footer-right">
+            <div class="footer-sotial">
                 <h2 class="footer-title">присоединяйтесь</h2>
                 <ul class="footer-sotial-list">
                     <li class="footer-social-item">
@@ -276,6 +276,25 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="footer-form">
+                <form action="" class="footer-signup">
+                    <h2 class="footer-title">Подпишитесь на рассылку</h2>
+                    <div class="footer-form-signup">
+                        <input
+                        type="email"
+                        class="form-footer-mail"
+                        placeholder="E-mail"
+                        name="mail"
+                        >
+                        <button type="submit" class="footer-form-button">
+                            Подписаться
+                            <svg class="footer-button-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-signup-btn"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
     </footer>
