--- a/index.html
+++ b/index.html
@@ -430,13 +430,12 @@
             <!-- </div> -->
             <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
             <form action="">
-                <div class="modal-field">
-                    <label class="form-input-text" for="user-name">
-                    Имя
-                    </label>
+                <label class="form-input-text">
+                    <span class="input-title">
+                        Имя
+                    </span>
                     <div class="input-wrap">
                         <input
-                            id="user-name"
                             type="text"
                             name="user-name"
                             class="modal-form-text"
@@ -446,73 +445,65 @@
                             </use>
                         </svg>
                     </div>
-                </div>
-                <div class="modal-field">
-                    <label class="form-input-text" for="user-tel">
+                </label>
+                <label class="form-input-text">
+                    <span class="input-title">
                         Телефон
-                    </label>
+                    </span>
                     <div class="input-wrap">
-                    <input
-                        id="user-tel"
-                        type="tel"
-                        name="user-tel"
-                        class="modal-form-tel"
-                    >
-                    <svg class="input-icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-tel">
-                        </use>
-                    </svg>
+                        <input
+                        type="text"
+                        name="user-name"
+                        class="modal-form-text">
+                        <svg class="input-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-tel">
+                            </use>
+                        </svg>
                     </div>
-                </div>
-                <div class="modal-field">
-                    <label class="form-imput-text" for="user-mail">
+                </label>
+                <label class="form-input-text">
+                    <span class="input-title">
                         Почта
-                    </label>
+                    </span>
                     <div class="input-wrap">
-                    <input
-                        id="user-mail"
-                        type="mail"
-                        name="user-mail"
-                        class="modal-form-mail"
-                    >
-                    <svg class="input-icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-mail">
-                        </use>
-                    </svg>
+                        <input
+                        type="text"
+                        name="user-name"
+                        class="modal-form-text">
+                        <svg class="input-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-mail">
+                            </use>
+                        </svg>
                     </div>
-                </div>
-                <div class="modal-field">
-                    <label class="form-input-text" for="user-text">
+                </label>
+                <label class="form-input-comment">
+                    <span class="input-title">
                         Комментарий
-                    </label>
+                    </span>
                     <textarea
-                        id="user-text"
                         name="user-text"
                         class="user-text"
                         placeholder="Введите текст"
                     ></textarea>
-                    
-                </div>
-                <div class="modal-checkbox">
+                </label>
+                <label class="policy">
                     <input
-                        id="checkbox"
-                        type="checkbox"
-                        class="modal-checkbox-text visually-hidden"
-                        name="check"
-                    >
-                    <label for="checkbox" class="policy">
-                        <span class="check-mark">
-                            <svg class="check-icon" width="11" height="8">
-                                <use href="./images/icons.svg#icon-check">
-                                </use>
-                            </svg>
-                        </span>
-                        Соглашаюсь с рассылкой и принимаю&nbsp;
-                        <a href="" class="modal-checkbox-link">
-                            Условия договора
-                        </a>
-                    </label>
-                </div>
+                    type="checkbox"
+                    name="checkbox"
+                    class="modal-checkbox-text visually-hidden">
+                    <span class="check-mark">
+                        <svg class="check-icon" width="16" height="15">
+                            <use href="./images/icons.svg#icon-check">
+                            </use>
+                        </svg>
+                    </span>
+                    <span class="policy-text">
+                        Соглашаюсь с рассылкой и принимаю&nbsp
+                    </span>
+                    <a href="" class="modal-checkbox-link">
+                        Условия договора
+                    </a>
+                </label>
                 <div class="modal-button-wrap">
                     <button type="submit" class="modal-form-submit">Отправить</button>
                 </div>
