add required to checkbox

--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
                         class="form-footer-mail"
                         placeholder="E-mail"
                         name="mail"
+                        required
                         >
                         <button type="submit" class="footer-form-button">
                             Подписаться
